--- a/css/components/header.css
+++ b/css/components/header.css
@@ -39,6 +39,7 @@
    }
 
    .header__logo {
-     width: 30vw;
+     width: 35vw;
+     transform: translateY(2px);
    }
  }
