--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,5 @@
 /**
  * @file
- * Layout styling for pages.
- */
-
-.page__header {
-  padding: 2rem 3rem 8rem;
-}
-
-/* If the screen size is 768px wide or less, change padding */
-
-@media screen and (max-width: 768px) {
-  .page__header {
-    padding: 1rem 1rem 5rem;
-  }
-}
-/**
- * @file
  * Base element styles.
  */
 
@@ -316,6 +300,11 @@ body {
   filter: brightness(0) invert(1) opacity(1);
 }
 
+.footer__image {
+  transform: translateY(3px);
+  margin-right: 1rem;
+}
+
 @media screen and (max-width: 768px) {
   .footer__contact-info {
     padding: 2rem 1.4rem 2rem;
@@ -367,6 +356,23 @@ body {
   }
 
   .header__logo {
-    width: 30vw;
+    width: 35vw;
+    transform: translateY(2px);
+  }
+}
+/**
+ * @file
+ * Layout styling for pages.
+ */
+
+.page__header {
+  padding: 2rem 3rem 8rem;
+}
+
+/* If the screen size is 768px wide or less, change padding */
+
+@media screen and (max-width: 768px) {
+  .page__header {
+    padding: 1rem 1rem 5rem;
   }
 }
